--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -41,7 +41,7 @@
 .header__logo {
     display: inline-block;
     margin: 0px 70px 0px 0px;
-    z-index: 5;
+    z-index: 3;
 }
 
 .header__list {
@@ -374,15 +374,11 @@
         margin: 0px 0px 100px 0px;
     }
 
-    .header__menu {
-        padding: 60px 10px 20px 10px;
-    }
+
 }
 
-@media (max-height: 500px) {
-    .header__menu {
-        padding: 40px 10px 20px 10px;
-    }
+@media (max-height: 530px) {
+
 
     .header__item {
         line-height: 50px;
@@ -393,15 +389,14 @@
     }
 }
 
-@media (max-height: 470px) {
-    .header__top {
-        margin: 0px 0px 40px 0px;
-    }
-}
 
-@media (max-height: 415px) {
+@media (max-height: 470px) {
     .header__title {
         font-size: 25px;
+    }
+
+    .header__top {
+        margin: 0px 0px 40px 0px;
     }
 
     .header__subtitle {
@@ -413,10 +408,6 @@
         margin: 0px 0px 30px 0px;
     }
 
-    .header__menu {
-        padding: 30px 10px 20px 10px;
-    }
-
     .header__item {
         line-height: 45px;
     }
@@ -426,17 +417,20 @@
     }
 }
 
-@media (max-height: 400px) {
+@media (max-height: 450px) {
     .header {
         padding-top: 30px;
     }
-
     .header__menu {
-        padding: 10px 10px 20px 10px;
+        padding: 50px 10px 20px 10px;
     }
 }
 
-
+@media (max-height: 400px) {
+    .header__menu {
+        padding: 10px 10px 0px 10px;
+    }
+}
 
 @media (max-height:360px) {
     .header__title {
@@ -453,10 +447,6 @@
 @media (max-height: 330px) {
     .header {
         padding-top: 20px;
-    }
-
-    .header__menu {
-        padding: 0px 10px 20px 10px;
     }
 
     .header__item {
@@ -482,6 +472,9 @@
     .header__button {
         height: 50px;
         line-height: 20px;
+    }
+    .header__menu {
+        padding: 0px 10px 0px 10px;
     }
 }
 
